@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [mms] Fix IMAP filtering on combination fields (Bug #11197).
 * [jan] Fix showing blacklist option to mark message as deleted (Bug #11186).
 * [jan] Update Italian translation (Massimo Malabotta &lt;mmalabotta@units.it&gt;).
 * [jan] Fix folder names in Procmail rules if using Maildir (Bug #10113).
@@ -1027,6 +1028,7 @@
    <date>2011-12-13</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [mms] Fix IMAP filtering on combination fields (Bug #11197).
 * [jan] Fix showing blacklist option to mark message as deleted (Bug #11186).
 * [jan] Update Italian translation (Massimo Malabotta &lt;mmalabotta@units.it&gt;).
 * [jan] Fix folder names in Procmail rules if using Maildir (Bug #10113).
