@@ -2,6 +2,7 @@
 v2.0.8-git
 ----------
 
+[mms] Fix IMAP filtering on combination fields (Bug #11197).
 [jan] Fix showing blacklist option to mark message as deleted (Bug #11186).
 [jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
 [jan] Fix folder names in Procmail rules if using Maildir (Bug #10113).
